# erc20-rust

./: README.md  package.json  truffle-config.js
.github/: CODEOWNERS  settings.yml
contracts/erc20-token/: Cargo.toml
contracts/erc20-token/src/: lib.rs
migrations/: 2_contract_migration.js
test/: test-erc20-token.js
