[package]
name = "erc20-token-contract"
version = "0.1.0"
authors = ["Alexey Frolov <frol.rage@gmail.com>", "Oasis Labs Inc. <info@oasislabs.com"]

[dependencies]
owasm-ethereum = "0.7"
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
tiny-keccak = "1.3"
quote = "0.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

